# agent_vinod

./: .gitignore  README.md  pyproject.toml
src/vinod/: __init__.py  cli.py  consolidation.py  mcp_server.py  memory.py  session_writer.py  templates.py
