[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vinod"
version = "0.5.0"
description = "A stateful personal agent with episodic memory for Claude Code."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Arunabh Majumdar", email = "arunabh.majumdar@gmail.com"}
]
license = {text = "MIT"}
keywords = ["agent", "memory", "personalization", "llm", "productivity"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1.0",
    "anthropic>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/motornomad/agent_vinod"
Repository = "https://github.com/motornomad/agent_vinod"
"Bug Tracker" = "https://github.com/motornomad/agent_vinod/issues"

[project.scripts]
vinod = "vinod.cli:cli"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
